[gd_scene load_steps=9 format=3 uid="uid://dq4plu0mj7757"]

[ext_resource type="Theme" uid="uid://c521sxmdt64pl" path="res://addons/UDSEngine/Database_Manager/Theme and Style/main_30.tres" id="1_tq3m0"]
[ext_resource type="Script" path="res://addons/UDSEngine/Event_Manager/Command_List_Forms/SFX_EventInputForm.gd" id="2_ih0ic"]
[ext_resource type="PackedScene" uid="uid://d3jrhhx7te6ex" path="res://addons/UDSEngine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Input_audio.tscn" id="3_ragve"]
[ext_resource type="PackedScene" uid="uid://cjrcdqw6fj18s" path="res://addons/UDSEngine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Checkbox_Template.tscn" id="4_827w4"]
[ext_resource type="PackedScene" uid="uid://blyuurjsfw16s" path="res://addons/UDSEngine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/ItemType_Selection.tscn" id="4_jlqec"]
[ext_resource type="PackedScene" uid="uid://b4i04twjpw3iu" path="res://addons/UDSEngine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Number_Counter_Float.tscn" id="6_k2qp6"]
[ext_resource type="PackedScene" uid="uid://dlthmlrbks64q" path="res://addons/UDSEngine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Popup_Delete_Confirm.tscn" id="7_8h4ip"]
[ext_resource type="PackedScene" uid="uid://c1klfol683pf1" path="res://addons/UDSEngine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/popup_deleteKey.tscn" id="9_m025f"]

[node name="SFX_EventInputForm" type="Control" groups=["Tab"]]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 599.0
grow_horizontal = 2
theme = ExtResource("1_tq3m0")
script = ExtResource("2_ih0ic")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "SFX"
horizontal_alignment = 1

[node name="SFXGroupCheckbox" parent="Control/VBoxContainer" instance=ExtResource("4_827w4")]
layout_mode = 2
true_text = "Group"
false_text = "Single"
label_text = "Select SFX Group?"
is_label_button = false

[node name="Label" parent="Control/VBoxContainer/SFXGroupCheckbox" index="0"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="Hbox1" parent="Control/VBoxContainer/SFXGroupCheckbox" index="1"]
layout_mode = 2

[node name="Label2" parent="Control/VBoxContainer/SFXGroupCheckbox/Hbox1" index="0"]
layout_mode = 2

[node name="Background" parent="Control/VBoxContainer/SFXGroupCheckbox/Hbox1" index="1"]
layout_mode = 2

[node name="Input" parent="Control/VBoxContainer/SFXGroupCheckbox/Hbox1/Background" index="0"]
layout_mode = 1
offset_top = -12.0
offset_bottom = 12.0
button_pressed = true
text = "Group"

[node name="Label3" parent="Control/VBoxContainer/SFXGroupCheckbox/Hbox1" index="2"]
layout_mode = 2

[node name="input_templateBuffer" parent="Control/VBoxContainer/SFXGroupCheckbox" index="2"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="SFXGroupDropdown" parent="Control/VBoxContainer/HBoxContainer3" instance=ExtResource("4_jlqec")]
layout_mode = 2
selection_table_name = "SFX Groups"
label_text = "SFX Group"
is_label_button = false

[node name="SFXSingleAudioInput" parent="Control/VBoxContainer/HBoxContainer3" instance=ExtResource("3_ragve")]
visible = false
layout_mode = 2
label_text = "SFX Options"
is_label_button = false

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="RepeatSoundCheckbox" parent="Control/VBoxContainer/HBoxContainer2" instance=ExtResource("4_827w4")]
layout_mode = 2
true_text = "Yes"
false_text = "No"
label_text = "Repeat Sound?"
is_label_button = false

[node name="RepeatSoundAmount" parent="Control/VBoxContainer/HBoxContainer2" instance=ExtResource("6_k2qp6")]
layout_mode = 2

[node name="WaitCheckbox" parent="Control/VBoxContainer" instance=ExtResource("4_827w4")]
layout_mode = 2
true_text = "Yes"
false_text = "No"
label_text = "Wait until sound is complete to resume event?"
is_label_button = false

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Accept" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Accept"

[node name="Cancel" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Cancel"

[node name="Popups" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0862745, 0.0862745, 0.0862745, 0.866667)

[node name="FileSelect" type="Control" parent="Popups"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ListInput" type="Control" parent="Popups"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Popup_Delete_Confirm" parent="Popups" instance=ExtResource("7_8h4ip")]
visible = false
layout_mode = 1

[node name="PanelContainer" parent="Popups/Popup_Delete_Confirm" index="0"]
layout_mode = 1

[node name="VBoxContainer" parent="Popups/Popup_Delete_Confirm/PanelContainer" index="0"]
layout_mode = 2

[node name="Label" parent="Popups/Popup_Delete_Confirm/PanelContainer/VBoxContainer" index="0"]
layout_mode = 2

[node name="Label2" parent="Popups/Popup_Delete_Confirm/PanelContainer/VBoxContainer" index="1"]
layout_mode = 2

[node name="HBoxContainer" parent="Popups/Popup_Delete_Confirm/PanelContainer/VBoxContainer" index="2"]
layout_mode = 2

[node name="Accept_Button" parent="Popups/Popup_Delete_Confirm/PanelContainer/VBoxContainer/HBoxContainer" index="0"]
layout_mode = 2

[node name="Cancel_Button" parent="Popups/Popup_Delete_Confirm/PanelContainer/VBoxContainer/HBoxContainer" index="1"]
layout_mode = 2

[node name="popup_deleteKey" parent="Popups" instance=ExtResource("9_m025f")]
visible = false
layout_mode = 1

[node name="PanelContainer" parent="Popups/popup_deleteKey" index="0"]
layout_mode = 1

[node name="VBoxContainer" parent="Popups/popup_deleteKey/PanelContainer" index="0"]
layout_mode = 2

[node name="Label" parent="Popups/popup_deleteKey/PanelContainer/VBoxContainer" index="0"]
layout_mode = 2

[node name="Itemlist" parent="Popups/popup_deleteKey/PanelContainer/VBoxContainer" index="1"]
layout_mode = 2

[node name="258747" type="VScrollBar" parent="Popups/popup_deleteKey/PanelContainer/VBoxContainer/Itemlist" index="1"]
layout_mode = 0

[node name="254352" type="VScrollBar" parent="Popups/popup_deleteKey/PanelContainer/VBoxContainer/Itemlist" index="2"]
layout_mode = 0

[node name="32198" type="VScrollBar" parent="Popups/popup_deleteKey/PanelContainer/VBoxContainer/Itemlist" index="3"]
layout_mode = 0

[node name="HBoxContainer" parent="Popups/popup_deleteKey/PanelContainer/VBoxContainer" index="2"]
layout_mode = 2

[node name="Accept" parent="Popups/popup_deleteKey/PanelContainer/VBoxContainer/HBoxContainer" index="0"]
layout_mode = 2

[node name="Cancel" parent="Popups/popup_deleteKey/PanelContainer/VBoxContainer/HBoxContainer" index="1"]
layout_mode = 2

[connection signal="button_up" from="Control/VBoxContainer/HBoxContainer/Accept" to="." method="_on_accept_button_up"]
[connection signal="button_up" from="Control/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_button_up"]

[editable path="Control/VBoxContainer/SFXGroupCheckbox"]
[editable path="Popups/Popup_Delete_Confirm"]
[editable path="Popups/popup_deleteKey"]
